hphp/test/slow/namespace/generic_2.php.expectf

Fatal error: Argument 1 passed to NSTest\f() must be an instance of T, int given in %s/test/slow/namespace/generic_2.php on line 9
